fixed endpoints
