# swagger.json
@@ -15,6 +15,10 @@
     {
       "name": "books",
       "description": "Endpoints for managing books"
+    },
+    {
+      "name": "debug",
+      "description": "Debug endpoints (includes soft deleted data)"
     }
   ],
   "schemes": [
@@ -27,6 +31,22 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/authors/debug/all": {
+      "get": {
+        "tags": [
+          "debug"
+        ],
+        "description": "Get ALL authors including soft deleted (debug only)",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -199,12 +219,12 @@
         }
       }
     },
-    "/authors/debug/all": {
+    "/books/debug/all": {
       "get": {
         "tags": [
           "debug"
         ],
-        "description": "Get ALL authors including soft deleted (debug only)",
+        "description": "Get ALL books including soft deleted (debug only)",
         "responses": {
           "200": {
             "description": "OK"
@@ -405,22 +425,6 @@
         "responses": {
           "default": {
             "description": ""
-          }
-        }
-      }
-    },
-    "/books/debug/all": {
-      "get": {
-        "tags": [
-          "debug"
-        ],
-        "description": "Get ALL books including soft deleted (debug only)",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
